--- a/src/react-components/room/MicSetupModal.scss
+++ b/src/react-components/room/MicSetupModal.scss
@@ -134,7 +134,3 @@ $mobile-breakpoint-width: 450px;
   width: 24px;
   height: 100%;
 }
-
-.container {
-  z-index: 100;
-}
